--- a/WordClassifier-seq2seq.ipynb
+++ b/WordClassifier-seq2seq.ipynb
@@ -217,7 +217,7 @@
    ],
    "source": [
     "# Shuffle data for later splitting\n",
-    "images, labels = correspondingShuffle(images, labels)\n",
+    "images, labels = correspondingShuffle([images, labels])\n",
     "\n",
     "idxs = [i+2 for i in range(char_size)]\n",
     "idx_to_chars = dict(zip(idxs, CHARS))\n",
@@ -1774,7 +1774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
