Fixing resize error, cropAddBorder error, new imageStandardization - will need WordClassifier-seq2seq retrain ndarray.resize function completely mess up the images - used in WordClassifiers Fixing cropAddBorder function that crop images in worng way - used in normalization
Evaluate models without letter thresholding

--- a/WordClassifier-seq2seq.ipynb
+++ b/WordClassifier-seq2seq.ipynb
@@ -305,9 +305,10 @@
     "        \n",
     "        # First PADDING of images to slider size ( -(a // b) ==  ceil(a/b))\n",
     "        self.slider = slider\n",
-    "        for i in images:\n",
-    "            i.resize((i.shape[0], -(-i.shape[1] // slider[1]) * slider[1]),\n",
-    "                     refcheck=False)\n",
+    "        for i in range(len(images)):\n",
+    "            images[i] = extendImg(\n",
+    "                images[i],\n",
+    "                (images[i].shape[0], -(-images[i].shape[1] // slider[1]) * slider[1]))\n",
     "        in_length = [image.shape[1]//slider[1] for image in images]\n",
     "        \n",
     "        # Split images to sequence of vectors\n",
