--- a/WordClassifier-Seq2Seq.ipynb
+++ b/WordClassifier-Seq2Seq.ipynb
@@ -41,7 +41,7 @@
     "import math\n",
     "import unidecode\n",
     "\n",
-    "from ocr.datahelpers import loadWordsData, correspondingShuffle\n",
+    "from ocr.datahelpers import loadWordsData, correspondingShuffle, char2idx\n",
     "from ocr.helpers import extendImg\n",
     "from ocr.mlhelpers import TrainingPlot\n",
     "from ocr.tfhelpers import Graph, create_cell\n",
@@ -88,55 +88,11 @@
     }
    ],
    "source": [
-    "images, labels = loadWordsData(['data/words_raw/'],\n",
-    "                               loadGaplines=False)\n",
-    "\n",
-    "for i in range(len(images)):\n",
-    "    images[i] = imageNorm(\n",
-    "        cv2.cvtColor(images[i], cv2.COLOR_GRAY2RGB),\n",
-    "        60,\n",
-    "        border=False,\n",
-    "        tilt=True,\n",
-    "        hystNorm=True)\n",
+    "images, labels = loadWordsData(['data/words2/'], loadGaplines=False)\n",
     "\n",
     "if LANG == 'en':\n",
     "    for i in range(len(labels)):\n",
     "        labels[i] = unidecode.unidecode(labels[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of chars: 52\n"
-     ]
-    }
-   ],
-   "source": [
-    "CHARS = ['A', 'a', 'Á', 'á', 'B', 'b', 'C', 'c', 'Č', 'č',\n",
-    "         'D', 'd', 'Ď', 'ď', 'E', 'e', 'É', 'é', 'Ě', 'ě',\n",
-    "         'F', 'f', 'G', 'g', 'H', 'h', 'I', 'i', 'Í', 'í',         \n",
-    "         'J', 'j', 'K', 'k', 'L', 'l', 'M', 'm', 'N', 'n',\n",
-    "         'Ň', 'ň', 'O', 'o', 'Ó', 'ó', 'P', 'p', 'Q', 'q',\n",
-    "         'R', 'r', 'Ř', 'ř', 'S', 's', 'Š', 'š', 'T', 't',\n",
-    "         'Ť', 'ť', 'U', 'u', 'Ú', 'ú', 'Ů', 'ů', 'V', 'v',\n",
-    "         'W', 'w', 'X', 'x', 'Y', 'y', 'Ý', 'ý', 'Z', 'z',\n",
-    "         'Ž', 'ž']\n",
-    "if LANG == 'en':\n",
-    "    CHARS = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I',\n",
-    "             'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S',\n",
-    "             'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'a', 'b', 'c',\n",
-    "             'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm',\n",
-    "             'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w',\n",
-    "             'x', 'y', 'z']\n",
-    "    \n",
-    "char_size = len(CHARS)\n",
-    "print(\"Number of chars:\", char_size)"
    ]
   },
   {
@@ -148,10 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "char_size = 82 if LANG =='cz' else 52\n",
+    "\n",
     "PAD = 0   # Padding\n",
     "EOS = 1   # End of seq\n",
     "\n",
@@ -197,13 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[28, 29, 30, 31, 2, 3, 4, 5]\n",
       "Training images: 4055\n",
       "Testing images: 1014\n"
      ]
@@ -213,14 +172,10 @@
     "# Shuffle data for later splitting\n",
     "images, labels = correspondingShuffle([images, labels])\n",
     "\n",
-    "idxs = [i+2 for i in range(char_size)]\n",
-    "idx_to_chars = dict(zip(idxs, CHARS))\n",
-    "chars_to_idx = dict(zip(CHARS, idxs))\n",
-    "\n",
     "labels_idx = np.empty(len(labels), dtype=object)\n",
     "for i, label in enumerate(labels):\n",
-    "    labels_idx[i] = [chars_to_idx[c] for c in label]\n",
-    "\n",
+    "    labels_idx[i] = [char2idx(c, True) for c in label]\n",
+    "    \n",
     "# Split data on train and test dataset\n",
     "div = int(train_per * len(images))\n",
     "\n",
