--- a/WordClassifier-Seq2Seq2RNN.ipynb
+++ b/WordClassifier-Seq2Seq2RNN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
     "import math\n",
     "import unidecode\n",
     "\n",
-    "from ocr.datahelpers import loadWordsData, correspondingShuffle\n",
+    "from ocr.datahelpers import loadWordsData, correspondingShuffle, char2idx\n",
     "from ocr.helpers import implt, extendImg, resize\n",
     "from ocr.mlhelpers import TrainingPlot\n",
     "from ocr.normalization import letterNorm, imageStandardization\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,40 +96,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of chars: 52\n"
-     ]
-    }
-   ],
-   "source": [
-    "CHARS = ['A', 'a', 'Á', 'á', 'B', 'b', 'C', 'c', 'Č', 'č',\n",
-    "         'D', 'd', 'Ď', 'ď', 'E', 'e', 'É', 'é', 'Ě', 'ě',\n",
-    "         'F', 'f', 'G', 'g', 'H', 'h', 'I', 'i', 'Í', 'í',         \n",
-    "         'J', 'j', 'K', 'k', 'L', 'l', 'M', 'm', 'N', 'n',\n",
-    "         'Ň', 'ň', 'O', 'o', 'Ó', 'ó', 'P', 'p', 'Q', 'q',\n",
-    "         'R', 'r', 'Ř', 'ř', 'S', 's', 'Š', 'š', 'T', 't',\n",
-    "         'Ť', 'ť', 'U', 'u', 'Ú', 'ú', 'Ů', 'ů', 'V', 'v',\n",
-    "         'W', 'w', 'X', 'x', 'Y', 'y', 'Ý', 'ý', 'Z', 'z',\n",
-    "         'Ž', 'ž']\n",
-    "if LANG == 'en':\n",
-    "    CHARS = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I',\n",
-    "             'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S',\n",
-    "             'T', 'U', 'V', 'W', 'X', 'Y', 'Z', 'a', 'b', 'c',\n",
-    "             'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm',\n",
-    "             'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w',\n",
-    "             'x', 'y', 'z']\n",
-    "\n",
-    "print(\"Number of chars:\", len(CHARS))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,10 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "CHARS = 82 if LANG =='cz' else 52\n",
+    "\n",
     "PAD = 0   # Padding\n",
     "EOS = 1   # End of seq\n",
     "LETTER_PAD = -1.0\n",
@@ -150,7 +118,7 @@
     "slider_size = (60, 2)\n",
     "slider_step = 2\n",
     "N_INPUT = slider_size[0]*slider_size[1]\n",
-    "char_size = len(CHARS) + 2\n",
+    "char_size = CHARS + 2\n",
     "letter_size = 64*64\n",
     "\n",
     "encoder_layers = 2\n",
@@ -192,13 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[28, 29, 30, 31, 2, 3, 4, 5]\n",
       "Training images: 4055\n",
       "Testing images: 1014\n"
      ]
@@ -208,15 +177,12 @@
     "# Shuffle data for later splitting\n",
     "images, labels, gaplines = correspondingShuffle([images, labels, gaplines])\n",
     "\n",
-    "idxs = [i+1 for i in range(char_size)]\n",
-    "idx_to_chars = dict(zip(idxs, CHARS))\n",
-    "chars_to_idx = dict(zip(CHARS, idxs))\n",
-    "\n",
     "labels_idx = np.empty(len(labels), dtype=object)\n",
     "for i, label in enumerate(labels):\n",
-    "    labels_idx[i] = [chars_to_idx[c] for c in label]\n",
+    "    labels_idx[i] = [char2idx(c, True) for c in label]\n",
     "    labels_idx[i].append(EOS)\n",
-    "\n",
+    "    \n",
+    "    \n",
     "# Split data on train and test dataset\n",
     "div = int(train_per * len(images))\n",
     "\n",
